--- a/hotel.html
+++ b/hotel.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/headerfooter.css" />
     <link rel="stylesheet" href="css/hotel.css" />
     <link rel="stylesheet" href="css/materialize-social.css" />
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
+    rel="stylesheet"  type='text/css'>
     <link rel="icon" href="img/isotipo.png" />
     <title>Cam'On</title>
     <!--Import Google Icon Font-->
@@ -94,32 +96,35 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-        <div class="divider"></div>
     </div>
 
-    <footer class="page-footer orange lighten-5">
-        <div class="container footer">
-            <div class="row">
-                <div class="col l6 s12">
-                    <a href="#!"><img class="logotipofooter" src="img/logotipo.png" /></a>
-                </div>
-                <div class="col l4 offset-l2 s12 right-align">
-                    <div class="socials">
-                        <ul>
-                            <a href="#!">Nosotros</a>
-                            <a href="#!">Contacto</a>
-                        </ul>
-                        <a class="waves-effect waves-light btn-floating social facebook">
-                            <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                        <a class="waves-effect waves-light btn-floating social twitter">
-                            <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                        <a class="waves-effect waves-light btn-floating social instagram">
-                            <i class="fa fa-instagram"></i> Sign in with instagram</a>
-                    </div>
-                </div>
-            </div>
+    <!-- Footer -->
+    <div class="container">
+        <div class="divider"></div>
         </div>
-    </footer>
+        <footer class="page-footer orange lighten-5">
+          <div class="container footer">
+            <div class="row">
+              <div class="col l6 s12">
+                <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
+              </div>
+              <div class="col l4 offset-l2 s12 right-align">
+                <div class="socials">
+                <ul>
+                  <a href="#!">Nosotros</a>
+                  <a href="#!">Contacto</a>
+                </ul>
+                  <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
+                  <i class="fa fa-facebook"></i> Sign in with facebook</a>
+                  <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
+                  <i class="fa fa-twitter"></i> Sign in with twitter</a>
+                  <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
+                  <i class="fa fa-instagram"></i> Sign in with instagram</a>
+                </div>
+              </div>
+            </div>
+             </div>
+        </footer>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/hotel.js"></script>
