--- a/guias.html
+++ b/guias.html
@@ -58,95 +58,173 @@
 
     <div class="guias left-align">
         <div class="container center-align">
-        <h1 class="flow-text">RECOMENDADOS</h1>
-        <div class="row center-align">
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino1.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+          
+          <div class="row">
+            <div class="col s12 m4 10"><h1 class="flow-text section center-align">RECOMENDADOS</h1></div>
+            <div class="col s12 m4 l8"><div class="divider"></div></div>
+          </div>
+
+            <div class="row center-align">
+                <div class="col s3 m3">
+                  <div class="card z-depth-2 hoverable">
+                    <div class="card-image">
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
+                        <span class="card-title center-align">Cordoba</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s3 m3">
+                  <div class="card z-depth-2 hoverable">
+                    <div class="card-image">
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
+                        <span class="card-title">Misiones</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s3 m3">
+                  <div class="card z-depth-2 hoverable">
+                    <div class="card-image">
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
+                        <span class="card-title">Catamarca</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s3 m3">
+                  <div class="card z-depth-2 hoverable">
+                    <div class="card-image">
+                        <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
+                        <span class="card-title">Bariloche</span>
+                    </div>
+                  </div>
+                </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino2.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
-            </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino3.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
-            </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino4.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
-            </div>
-        </div>
         </div>
     </div>
 
     <div class="guias left-align">
         <div class="container center-align">
-        <h1 class="flow-text">POPULARES</h1>
-        <div class="row center-align">
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino1.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+
+          <div class="row">
+            <div class="col s12 m4 10"><h1 class="flow-text section center-align">POPULARES</h1></div>
+            <div class="col s12 m4 l8"><div class="divider"></div></div>
+          </div>
+
+            <div class="row center-align">
+              <div class="col s3 m3">
+                <div class="card z-depth-2 hoverable">
+                  <div class="card-image">
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
+                      <span class="card-title center-align">Cordoba</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col s3 m3">
+                <div class="card z-depth-2 hoverable">
+                  <div class="card-image">
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
+                      <span class="card-title">Misiones</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col s3 m3">
+                <div class="card z-depth-2 hoverable">
+                  <div class="card-image">
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
+                      <span class="card-title">Catamarca</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col s3 m3">
+                <div class="card z-depth-2 hoverable">
+                  <div class="card-image">
+                      <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
+                      <span class="card-title">Bariloche</span>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino2.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
-            </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino3.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
-            </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino4.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
-            </div>
-        </div>
         </div>
     </div>
 
     <div class="guias left-align">
         <div class="container center-align">
-        <h1 class="flow-text">PROVINCIAS</h1>
-        <div class="row center-align">
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino1.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+
+          <div class="row">
+            <div class="col s12 m4 10"><h1 class="flow-text section center-align">PROVINCIAS</h1></div>
+            <div class="col s12 m4 l8"><div class="divider"></div></div>
+          </div>
+        
+          <div class="row center-align">
+            <div class="col s3 m3">
+              <div class="card z-depth-2 hoverable">
+                <div class="card-image">
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
+                    <span class="card-title center-align">Cordoba</span>
+                </div>
+              </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino2.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+            <div class="col s3 m3">
+              <div class="card z-depth-2 hoverable">
+                <div class="card-image">
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
+                    <span class="card-title">Misiones</span>
+                </div>
+              </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino3.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+            <div class="col s3 m3">
+              <div class="card z-depth-2 hoverable">
+                <div class="card-image">
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
+                    <span class="card-title">Catamarca</span>
+                </div>
+              </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino4.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+            <div class="col s3 m3">
+              <div class="card z-depth-2 hoverable">
+                <div class="card-image">
+                    <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
+                    <span class="card-title">Bariloche</span>
+                </div>
+              </div>
             </div>
         </div>
 
         <div class="row center-align">
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino1.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+          <div class="col s3 m3">
+            <div class="card z-depth-2 hoverable">
+              <div class="card-image">
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino1.jpg"></a>
+                  <span class="card-title center-align">Cordoba</span>
+              </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino2.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+          </div>
+          <div class="col s3 m3">
+            <div class="card z-depth-2 hoverable">
+              <div class="card-image">
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino2.jpg"></a>
+                  <span class="card-title">Misiones</span>
+              </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino3.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+          </div>
+          <div class="col s3 m3">
+            <div class="card z-depth-2 hoverable">
+              <div class="card-image">
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino3.jpg"></a>
+                  <span class="card-title">Catamarca</span>
+              </div>
             </div>
-            <div class="col s3 m3 hoverable">
-                <img class="responsive-img z-depth-3" src="img/destino4.jpg" alt="Guías" />
-                <div><a class="waves-effect waves-light btn" href="descubri.html"> Visitar</a></div>
+          </div>
+          <div class="col s3 m3">
+            <div class="card z-depth-2 hoverable">
+              <div class="card-image">
+                  <a href="descubri.html"><img class="responsive-img" src="img/destino4.jpg"></a>
+                  <span class="card-title">Bariloche</span>
+              </div>
             </div>
-        </div>
+          </div>
+      </div>
 
-        </div>
-
+      </div>
     </div>
 
     <ul class="section pagination center-align">
@@ -161,29 +239,32 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer orange lighten-5">
-      <div class="container footer">
-        <div class="row">
-          <div class="col l6 s12">
-            <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
-          </div>
-          <div class="col l4 offset-l2 s12 right-align">
-            <div class="socials">
-            <ul>
-              <a href="#!">Nosotros</a>
-              <a href="#!">Contacto</a>
-            </ul>
-              <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
-              <i class="fa fa-facebook"></i> Sign in with facebook</a>
-              <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
-              <i class="fa fa-twitter"></i> Sign in with twitter</a>
-              <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
-              <i class="fa fa-instagram"></i> Sign in with instagram</a>
+    <div class="container">
+      <div class="divider"></div>
+      </div>
+      <footer class="page-footer orange lighten-5">
+        <div class="container footer">
+          <div class="row">
+            <div class="col l6 s12">
+              <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
+            </div>
+            <div class="col l4 offset-l2 s12 right-align">
+              <div class="socials">
+              <ul>
+                <a href="#!">Nosotros</a>
+                <a href="#!">Contacto</a>
+              </ul>
+                <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
+                <i class="fa fa-facebook"></i> Sign in with facebook</a>
+                <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
+                <i class="fa fa-twitter"></i> Sign in with twitter</a>
+                <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
+                <i class="fa fa-instagram"></i> Sign in with instagram</a>
+              </div>
             </div>
           </div>
-        </div>
-         </div>
-    </footer>
+           </div>
+      </footer>
 
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="js/materialize.min.js"></script>
