cambios en clase

--- a/hotel.html
+++ b/hotel.html
@@ -116,11 +116,11 @@
                   <a href="#!">Nosotros</a>
                   <a href="#!">Contacto</a>
                 </ul>
-                  <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
+                  <a class="waves-effect waves-light btn-floating social  black hoverable">
                   <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                  <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
+                  <a class="waves-effect waves-light btn-floating social  black hoverable">
                   <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                  <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
+                  <a class="waves-effect waves-light btn-floating social  black hoverable">
                   <i class="fa fa-instagram"></i> Sign in with instagram</a>
                 </div>
               </div>
@@ -130,6 +130,7 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/hotel.js"></script>
+	<script type="text/javascript" src="js/descubri.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
