--- a/ofertas.html
+++ b/ofertas.html
@@ -140,6 +140,7 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/hotel.js"></script>
+		<script type="text/javascript" src="js/descubri.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
