--- a/home.html
+++ b/home.html
@@ -75,8 +75,42 @@
     </div>
 
     <!-- Body guias -->
-    <div class="home-body section ">
-      <div class="container row center-align section hoverable">
+    <div class="home-body section">
+      <div class="container row section">
+        <div class="col s6 right-align section hoverable">            
+          <div>
+            <a class="imagen" href="guias.html">
+              <img class="responsive-img z-depth-2" src="img/guias.jpg" alt="Guías" />
+            </a>
+          </div>
+          <div class="center-align">
+            <h2 class="flow-text">Nuestras</h2>
+            <h1 class="flow-text">GUÍAS TURÍSTICAS</h1>
+            <p class ="flow-text">
+              Toda la información necesaria para <br> disfrutar tu viaje al máximo.
+            </p>
+            <a class="waves-effect waves-light btn explorar" href="guias.html">Explorar</a>
+          </div>
+        </div>
+        <div class="col s6 right-align section hoverable">            
+          <div>
+            <a class="imagen" href="planificador.html">
+              <img class="responsive-img z-depth-2" src="img/planificador.jpg" alt="Planificador" />
+            </a>
+            <div class="center-align">
+              <h2 class="flow-text">Nuestro</h2>
+              <h1 class="flow-text">PLANIFICADOR</h1>
+              <p class="flow-text">
+                Todo lo que necesitas para mantenerte <br> organizado en tus viajes.
+              </p>
+              <a class="waves-effect waves-light btn explorar" href="planificador.html">Explorar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+      <!-- <div class="container row center-align section hoverable">
         <div class="col s6 right-align">            
           <div>
             <img class="responsive-img z-depth-2" src="img/guias.jpg" alt="Guías" />
@@ -92,8 +126,7 @@
         </div>
       </div>
 
-    <!-- Body planificador -->
-      <div class="container row center-align section hoverable">
+     <div class="container row center-align section hoverable">
         <div class="col s6 right-align">
           <h2 class="flow-text">Nuestro</h2>
           <h1 class="flow-text">PLANIFICADOR</h1>
@@ -107,50 +140,53 @@
             <img class="responsive-img z-depth-2" src="img/planificador.jpg" alt="Guías" />
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="container"> 
-        <div class="row">
-          <div class="col s12 m4 l3"><div class="divider"></div></div>
-          <div class="col s12 m4 l6"><h1 class="flow-text section center-align">PRODUCTOS MAS VENDIDOS</h1></div>
-          <div class="col s12 m4 l3"><div class="divider"></div></div>
+      <div class="home-slider">
+        <div class="container"> 
+          <div class="row">
+            <div class="col s12 m4 l3"><div class="divider"></div></div>
+            <div class="col s12 m4 l6"><h1 class="flow-text section center-align">PRODUCTOS MAS VENDIDOS</h1></div>
+            <div class="col s12 m4 l3"><div class="divider"></div></div>
+          </div>
         </div>
-      </div>
 
     <!-- Slider productos -->
-    <div class="home-productos">
-      <div class="container center-align">
-        <div class="carousel">
-          <a class="carousel-item hoverable" href="#one!">
-              <img src="img/producto1.jpg">
-              CAMARA
-          </a>
-          <a class="carousel-item hoverable" href="#two!">
-              <img src="img/producto3.jpg">
-              MOCHILA
-          </a>
-          <a class="carousel-item hoverable" href="#three!">
-              <img src="img/producto2.jpg">
-              CAMARA
-          </a>
-          <a class="carousel-item hoverable" href="#four!">
-              <img src="img/producto1.jpg">
-              CAMARA
-          </a>
-          <a class="carousel-item hoverable" href="#five!">
-              <img src="img/producto4.jpg">
-              RIÑONERA
-          </a>
+        <div class="home-productos">
+          <div class="container center-align">
+            <div class="carousel">
+              <a class="carousel-item hoverable" href="tienda.html">
+                  <img src="img/producto1.jpg">
+                  Cámara Nikon D5600
+              </a>
+              <a class="carousel-item hoverable" href="tienda.html">
+                  <img src="img/producto3.jpg">
+                  Kathmandu Litehaul 38L
+              </a>
+              <a class="carousel-item hoverable" href="tienda.html">
+                  <img src="img/producto2.jpg">
+                  Cámara Canon T6        
+                </a>
+              <a class="carousel-item hoverable" href="tienda.html">
+                  <img src="img/producto5.jpg">
+                  Termo Stanley 1 Litro
+              </a>
+              <a class="carousel-item hoverable" href="tienda.html">
+                  <img src="img/producto4.jpg">
+                  Riñonera NBC
+              </a>
+            </div>
+            <a class="waves-effect waves-light btn" href="tienda.html">Tienda</a>
+          </div>
         </div>
-        <a class="waves-effect waves-light btn" href="tienda.html">Tienda</a>
       </div>
-    </div>
-</div>
 
+  </div>
 </div>
     <!-- Footer -->
     <div class="container">
-    <div class="divider"></div>
+      <div class="divider"> 
+      </div>
     </div>
     <footer class="page-footer orange lighten-5">
       <div class="container footer">
@@ -164,16 +200,16 @@
               <a href="#!">Nosotros</a>
               <a href="#!">Contacto</a>
             </ul>
-              <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
+              <a class="waves-effect waves-light btn-floating social black hoverable">
               <i class="fa fa-facebook"></i> Sign in with facebook</a>
-              <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
+              <a class="waves-effect waves-light btn-floating social black hoverable">
               <i class="fa fa-twitter"></i> Sign in with twitter</a>
-              <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
+              <a class="waves-effect waves-light btn-floating social black hoverable">
               <i class="fa fa-instagram"></i> Sign in with instagram</a>
             </div>
           </div>
         </div>
-         </div>
+      </div>
     </footer>
 
     <!--JavaScript at end of body for optimized loading-->
