--- a/guias.html
+++ b/guias.html
@@ -268,11 +268,11 @@
                 <a href="#!">Nosotros</a>
                 <a href="#!">Contacto</a>
               </ul>
-                <a class="waves-effect waves-light btn-floating social facebook blue darken-4 hoverable">
+                <a class="waves-effect waves-light btn-floating social black hoverable">
                 <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                <a class="waves-effect waves-light btn-floating social twitter blue lighten-1 hoverable">
+                <a class="waves-effect waves-light btn-floating social black hoverable">
                 <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                <a class="waves-effect waves-light btn-floating social instagram indigo lighten-2 hoverable">
+                <a class="waves-effect waves-light btn-floating social black hoverable">
                 <i class="fa fa-instagram"></i> Sign in with instagram</a>
               </div>
             </div>
