--- a/hotel.html
+++ b/hotel.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/headerfooter.css" />
     <link rel="stylesheet" href="css/hotel.css" />
     <link rel="stylesheet" href="css/materialize-social.css" />
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" 
-    rel="stylesheet"  type='text/css'>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+        type='text/css'>
     <link rel="icon" href="img/isotipo.png" />
     <title>Cam'On</title>
     <!--Import Google Icon Font-->
@@ -53,13 +53,13 @@
                 <div class="divider"></div>
                 <div class="col s6 row">
                     <h3 class="flow-text center-align">Check-in</h3>
-                    <input type="text" class="timepicker" placeholder="horario check-in">
-                    <input type="text" class="datepicker" id="datepicker" placeholder="Escoge la fecha de ingreso">
+                    <input type="text" class="timepicker" placeholder="HORARIO">
+                    <input type="text" class="datepicker" id="datepicker" placeholder="FECHA DE INGRESO">
                 </div>
                 <div class="col s6 row">
                     <h3 class="flow-text center-align">Check-out</h3>
-                    <input type="text" class="timepicker" placeholder="horario check-out">
-                    <input type="text" class="datepicker" id="datepicker" placeholder="Escoge la fecha de salida">
+                    <input type="text" class="timepicker" placeholder="HORARIO">
+                    <input type="text" class="datepicker" id="datepicker" placeholder="FECHA DE SALIDA">
                 </div>
                 <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-3">Ver
                         ofertas</a></div>
@@ -82,13 +82,13 @@
             </div>
         </div>
 
-        <div class="divider row"></div>
+        <div class="divider"></div>
 
         <div>
-            <h2 class="flow-text">UBICACIÓN</h2>
-            <div>
-                <i class="medium material-icons">location_on</i>
-                <p class="flow-text ubi">Avenida Hipolito Yrigoyen 111, Córdoba X5000JHB Argentina</p>
+            <h2 class="flow-text ubi">UBICACIÓN</h2>
+            <div class="row">
+                <i class="medium material-icons col s1" style="width: 60px;">location_on</i>
+                <p class="flow-text col s11">Avenida Hipolito Yrigoyen 111, Córdoba X5000JHB Argentina</p>
             </div>
             <div class="video-container">
                 <iframe
@@ -103,34 +103,34 @@
     <div class="container">
         <div class="divider"></div>
 
-        </div>
-        <footer class="page-footer orange lighten-5">
-          <div class="container footer">
+    </div>
+    <footer class="page-footer orange lighten-5">
+        <div class="container footer">
             <div class="row">
-              <div class="col l6 s12">
-                <a href="#!"><img class="logotipofooter" src="img/logotipo.png"/></a>
-              </div>
-              <div class="col l4 offset-l2 s12 right-align">
-                <div class="socials">
-                <ul>
-                  <a href="#!">Nosotros</a>
-                  <a href="#!">Contacto</a>
-                </ul>
-                  <a class="waves-effect waves-light btn-floating social  black hoverable">
-                  <i class="fa fa-facebook"></i> Sign in with facebook</a>
-                  <a class="waves-effect waves-light btn-floating social  black hoverable">
-                  <i class="fa fa-twitter"></i> Sign in with twitter</a>
-                  <a class="waves-effect waves-light btn-floating social  black hoverable">
-                  <i class="fa fa-instagram"></i> Sign in with instagram</a>
+                <div class="col l6 s12">
+                    <a href="#!"><img class="logotipofooter" src="img/logotipo.png" /></a>
                 </div>
-              </div>
+                <div class="col l4 offset-l2 s12 right-align">
+                    <div class="socials">
+                        <ul>
+                            <a href="#!">Nosotros</a>
+                            <a href="#!">Contacto</a>
+                        </ul>
+                        <a class="waves-effect waves-light btn-floating social black hoverable">
+                            <i class="fa fa-facebook"></i> Sign in with facebook</a>
+                        <a class="waves-effect waves-light btn-floating social black hoverable">
+                            <i class="fa fa-twitter"></i> Sign in with twitter</a>
+                        <a class="waves-effect waves-light btn-floating social black hoverable">
+                            <i class="fa fa-instagram"></i> Sign in with instagram</a>
+                    </div>
+                </div>
             </div>
-             </div>
-        </footer>
+        </div>
+    </footer>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/hotel.js"></script>
-	<script type="text/javascript" src="js/descubri.js"></script>
+    <script type="text/javascript" src="js/descubri.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
