ajustes modal hotel, tienda arreglo

--- a/tienda.html
+++ b/tienda.html
@@ -37,78 +37,78 @@
     </div>
   </nav>
 
-  <nav class="container row transparent">
-    <div class="col s12 center-align">
+  <nav class="container transparent">
+    <div>
       <ul>
-        <li><a class="flow-text brown-text" href="tienda.html"> Starter Kits </a></li>
+        <li><a class="flow-text brown-text" href="tienda.html">Starter Kits</a></li>
         <li><a class="flow-text brown-text" href="tienda.html"><strong>Mochilas</strong></a></li>
-        <li><a class="flow-text brown-text" href="tienda.html"> Dispositivos </a></li>
-        <li><a class="flow-text brown-text" href="tienda.html"> Indumentaria </a></li>
+        <li><a class="flow-text brown-text" href="tienda.html">Dispositivos</a></li>
+        <li><a class="flow-text brown-text" href="tienda.html">Indumentaria</a></li>
       </ul>
     </div>
   </nav>
 
-  <div class="home-body section ">
-    <div class="container row">
-      <div class="col s4 m3 hoverable product">
+  <div class="home-body section container">
+    <div class="row">
+      <div class="col s4 hoverable product">
         <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown"><i
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila4.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila 01 - $40.00</a>
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Rave - $40.00</a>
         </div>
       </div>
 
-      <div class="col s4 m3 hoverable product">
+      <div class="col s4 hoverable product">
         <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown"><i
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila2.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila 02 - $45.00</a>
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Urbana - $45.00</a>
         </div>
       </div>
 
-      <div class="col s4 m3 hoverable product">
+      <div class="col s4 hoverable product">
         <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown"><i
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila6.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila 03 - $50.00</a>
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila hero - $50.00</a>
         </div>
       </div>
     </div>
 
-    <div class="container row">
-      <div class="col s4 m3 hoverable product">
+    <div class="row">
+      <div class="col s4 hoverable product">
         <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown"><i
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila1.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila 01 - $40.00</a>
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Campus - $40.00</a>
         </div>
       </div>
 
-      <div class="col s4 m3 hoverable product">
+      <div class="col s4 hoverable product">
         <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown"><i
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila5.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila 02 - $45.00</a>
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Fly - $45.00</a>
         </div>
       </div>
 
-      <div class="col s4 m3 hoverable product">
+      <div class="col s4 hoverable product">
         <div class="shop-icon">
-          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown"><i
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila3.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila 03 - $50.00</a>
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Vancouver - $50.00</a>
         </div>
       </div>
     </div>
