--- a/tienda.html
+++ b/tienda.html
@@ -37,20 +37,20 @@
     </div>
   </nav>
 
-  <nav class="container transparent">
-    <div>
-      <ul>
-        <li><a class="flow-text brown-text" href="tienda.html">Starter Kits</a></li>
-        <li><a class="flow-text brown-text" href="tienda.html"><strong>Mochilas</strong></a></li>
-        <li><a class="flow-text brown-text" href="tienda.html">Dispositivos</a></li>
-        <li><a class="flow-text brown-text" href="tienda.html">Indumentaria</a></li>
+  <div class="container transparent">
+    <div class="row">
+      <ul class="shop-nav">
+        <li><a class="flow-text brown-text col s3" href="tienda.html">Starter Kits</a></li>
+        <li><a class="flow-text brown-text col s3" href="tienda.html"><strong>Mochilas</strong></a></li>
+        <li><a class="flow-text brown-text col s3" href="tienda.html">Dispositivos</a></li>
+        <li><a class="flow-text brown-text col s3" href="tienda.html">Indumentaria</a></li>
       </ul>
     </div>
-  </nav>
+  </div>
 
   <div class="home-body section container">
     <div class="row">
-      <div class="col s4 hoverable product">
+      <div class="col s4 m3 hoverable product">
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="col s4 hoverable product">
+      <div class="col s4 m3 hoverable product">
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="col s4 hoverable product">
+      <div class="col s4 m3 hoverable product">
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
@@ -79,10 +79,20 @@
         <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila hero - $50.00</a>
         </div>
       </div>
+
+      <div class="col s4 m3 hoverable product">
+        <div class="shop-icon">
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
+              class="material-icons">add_shopping_cart</i></a>
+        </div>
+        <img class="responsive-img" src="img/mochila6.png" alt="mochila" />
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila hero - $35.00</a>
+        </div>
+      </div>
     </div>
 
     <div class="row">
-      <div class="col s4 hoverable product">
+      <div class="col s4 m3 hoverable product">
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
@@ -92,7 +102,7 @@
         </div>
       </div>
 
-      <div class="col s4 hoverable product">
+      <div class="col s4 m3 hoverable product">
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
@@ -102,13 +112,23 @@
         </div>
       </div>
 
-      <div class="col s4 hoverable product">
+      <div class="col s4  m3 hoverable product">
         <div class="shop-icon">
           <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
               class="material-icons">add_shopping_cart</i></a>
         </div>
         <img class="responsive-img" src="img/mochila3.png" alt="mochila" />
-        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Vancouver - $50.00</a>
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Vancou - $50.00</a>
+        </div>
+      </div>
+
+      <div class="col s4  m3 hoverable product">
+        <div class="shop-icon">
+          <a class="btn-floating btn-large waves-effect waves-light #a1887f brown z-depth-3"><i
+              class="material-icons">add_shopping_cart</i></a>
+        </div>
+        <img class="responsive-img" src="img/mochila3.png" alt="mochila" />
+        <div class="botonCompras"><a class="waves-effect waves-light btn" href="tienda.html"> Mochila Vancou - $20.00</a>
         </div>
       </div>
     </div>
