--- a/hotel.html
+++ b/hotel.html
@@ -61,7 +61,7 @@
                     <input type="text" class="timepicker" placeholder="HORARIO">
                     <input type="text" class="datepicker" id="datepicker" placeholder="FECHA DE SALIDA">
                 </div>
-                <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-3">Ver
+                <div class="center-align"><a href="ofertas.html" class="btn waves-effect waves-light z-depth-2">Ver
                         ofertas</a></div>
             </div>
             <div class="col s6">
@@ -90,7 +90,7 @@
                 <i class="medium material-icons col s1" style="width: 60px;">location_on</i>
                 <p class="flow-text col s11">Avenida Hipolito Yrigoyen 111, Córdoba X5000JHB Argentina</p>
             </div>
-            <div class="video-container">
+            <div class="video-container z-depth-3">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2862.9802498307804!2d-64.18976919359166!3d-31.423038384058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a285c7dacddf%3A0x1edc5a7844a96778!2sAv.%20Hip%C3%B3lito%20Yrigoyen%20111%2C%20X5000%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1667834208247!5m2!1ses-419!2sar"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
